# SSBLAST

./: .gitignore  LICENSE  PERFORMANCE_REPORT.md  README.md  check_cupyx.py  check_triton.py  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.py
benchmarks/: benchmark.py  full_perf_test.py  perf_results.json
ssblast/: __init__.py  detector.py  dispatcher.py  precision.py  refinement.py  solver.py
ssblast/kernels/: ssblast_kernel.py
tests/: test_end_to_end.py  test_final_checks.py  test_layer0.py  test_layer1.py  test_layer2.py  test_layer3.py  test_layer4.py  test_layer5.py
